fix: text align

--- a/src/components/post/HospitalItem.css
+++ b/src/components/post/HospitalItem.css
@@ -67,6 +67,7 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  text-align: left;
 }
 
 .hospital-item-map-link {
